<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/label_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/label_1"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/view_questions"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:layout_below="@+id/label_1"
        android:layout_marginTop="12dp"
        android:background="#41934d"
        android:padding="6dp"
        android:textSize="28sp"/>
    <TextView
        android:id="@+id/label_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_questions"
        android:layout_margin="8dp"
        android:text="@string/list_of_suitable_places"/>
    <ListView
        android:id="@+id/list_of_places"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_below="@+id/label_2" />
    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/list_of_places"
        android:layout_margin="8dp"
        android:onClick="onClickYes"
        android:text="@string/yes"/>
    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/list_of_places"
        android:layout_margin="8dp"
        android:onClick="onClickNo"
        android:text="@string/no"/>
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_of_places"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:onClick="onClickStart"
        android:text="@string/start"/>

</RelativeLayout>
